2003-10-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amlogroll.c: set_pname("amlogroll").

2003-10-24  Todd M. Kover <kovert@omniscient.com>

	* add amqde for "quick and dirty estimates" under gnutar (program
	  that will traverse the filesystem rather than invoke gnutar).
	  controlled via configure option --with-qde.  This really wants to
	  be configured in the server.

2003-10-24  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverify.sh.in: Fix usage message.
	* common-src/fileheader.c (print_header): fprintf to outf.
	* server-src/tapefile.c (lookup_last_reusable_tape): Check for
	  tp->datestamp > 0.
	* server-src/amadmin.c (disklist_one): Don't print ':' on device line.

2003-10-23  Todd Kover <kovert@omniscient.com>

	* make amrecover link against readline rather than libamanda so
	  only amrecover would require the shared library (if it's found)

2003-10-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* client-src/amandates.c (finish_amandates): Call error() if the
	  close of amdf fail.
	* common-src/amflock.c (create_lock): Return -1 if the close of f fail.
	* common-src/amflock.c (read_lock): Don't set f to NULL if the close
	  fail.
	* server-src/tapefile.c (write_tapelist): Return 1 if the close of
	  tapef fail.

2003-10-14  John R. Jackson (jrj@purdue.edu)

	* docs/SYSTEM.NOTES: Add FreeBSD 5.1 note about setting the UDP packet
	  size, compliments of Nicolas Ecarnot <nicolas.ecarnot@accim.com>.

2003-10-14  John R. Jackson (jrj@purdue.edu)

	* client-src/sendsize.c: Handle case where PID's get re-used.

2003-10-14  John R. Jackson (jrj@purdue.edu)

	* configure.in: Need to check for sys/gscdds.h on AIX to enable
	  SCSI changer.

2003-10-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/genversion.c (prundefvar): New function to print an
	  undefined variable.
	* common-src/genversion.c: Print undefined variable.